# ridge-cli

./: LICENSE  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
docs/: index.html
ridge/: categorizer.py  cli.py  config.py  daemon.py  dashboard.py  reporter.py  scorer.py  setup.py  sites.py  storage.py  tracker.py
ridge/ml/: __init__.py  anomaly.py  coach.py  forecaster.py  gemini.py  labeler.py  ollama.py  patterns.py  router.py
tests/: test_categorizer.py  test_scorer.py  test_storage.py
