[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ridge-cli"
version = "0.1.0"
description = "Own your attention. Track your focus habits locally."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "psutil>=5.9",
    "schedule>=1.2",
]

[project.scripts]
ridge = "ridge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ridge*"]